--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/splash.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/session.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/watch_show_modal.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reviews.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
