--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/session.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/watch_show_modal.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/loading_spinner.css" />
     <link href="https://fonts.googleapis.com/css?family=Abel|Roboto&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
