--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/splash.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/search_main_page.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/search_results.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/session.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/watch_show_modal.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
