--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/search_main_page.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/search_results.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/session.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/watch_show_modal.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/loading_spinner.css" />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/search_main_page.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/search_results.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/session.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/watch_show_modal.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/loading_spinner.css" /> -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Roboto&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +18,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
